--- a/ruoyi-admin/src/main/resources/static/css/login.css
+++ b/ruoyi-admin/src/main/resources/static/css/login.css
@@ -54,6 +54,56 @@ body.signin {
 	border-radius:3px;
 	padding:30px
 }
+
+
+.pchpanel {
+	width:750px;
+	margin:10% auto 0;
+	/*color:rgba(255,255,255,.95)*/
+}
+/*.pchpanel .logopanel {*/
+/*	float:none;*/
+/*	width:auto;*/
+/*	padding:0;*/
+/*	background:0 0*/
+/*}*/
+/*.pchpanel .signin-info ul {*/
+/*	list-style:none;*/
+/*	padding:0;*/
+/*	margin:20px 0*/
+/*}*/
+/*.pchpanel .form-control {*/
+/*	display:block;*/
+/*	margin-top:15px*/
+/*}*/
+/*.pchpanel .uname {*/
+/*	background:#fff url(../img/user.png) no-repeat 95% center;*/
+/*	color:#333*/
+/*}*/
+/*.pchpanel .pword {*/
+/*	background:#fff url(../img/locked.png) no-repeat 95% center;*/
+/*	color:#333*/
+/*}*/
+/*.pchpanel .code {*/
+/*	background: #fff no-repeat 95% center;color:#333; margin:0 0 15px 0;*/
+/*}*/
+/*.pchpanel .btn {*/
+/*	margin-top:15px*/
+/*}*/
+.pchpanel form {
+	background:rgba(255,255,255,.2);
+	border:1px solid rgba(255,255,255,.3);
+	-moz-box-shadow:0 3px 0 rgba(12,12,12,.03);
+	-webkit-box-shadow:0 3px 0 rgba(12,12,12,.03);
+	box-shadow:0 3px 0 rgba(12,12,12,.03);
+	-moz-border-radius:3px;
+	-webkit-border-radius:3px;
+	border-radius:3px;
+	padding:30px
+}
+
+
+
 .signup-footer {
 	border-top:solid 1px rgba(255,255,255,.3);
 	margin:20px 0;
