--- a/ruoyi-admin/src/main/resources/templates/system/buyroom/buy.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buyroom/buy.html
@@ -13,7 +13,7 @@
                 <input name="houseId"  class="form-control" th:value="${id}" type="text" id="id" required disabled >
             </div>
         </div>
-        <div class="form-group" hidden="">
+        <div class="form-group" hidden>
             <label class="col-sm-3 control-label">民宿ID：</label>
             <div class="col-sm-8">
                 <input name="houseId"  class="form-control" th:value="查询中" type="text" id="houseId" required disabled >
@@ -80,7 +80,8 @@
         </div>
         <div>
             <p style="text-align: right">
-                <button th:style="'background:#1E90FF;border-style:none;color:#ffff;border-radius:10px;height:40px;width:70px'" name="dg" id="dg" onclick="dinggou()">我要订购</button>
+                <button th:style="'background:#1E90FF;border-style:none;color:#ffff;border-radius:10px;height:40px;width:70px'" name="dg" id="dg" onclick="dinggou()">我要预定</button>
+                <button th:style="'background:#DCDCDC;border-style:none;color:#ffff;border-radius:5px;height:40px;width:70px'" name="qx" id="qx" onclick="cancel()">返回</button>
             </p>
         </div>
     </form>
@@ -223,8 +224,12 @@
             //     }
             // });
             var url="system/buyroom/infopage/"+id;
-            $.modal.openTab("民宿订购",url);
+            $.modal.openTab("支付界面",url);
         }
+    }
+
+    function cancel() {
+        parent.location.reload();
     }
 
 </script>
