--- a/wx/pages/user/comment/comment.wxml
+++ b/wx/pages/user/comment/comment.wxml
@@ -1,14 +1,14 @@
 <view class='yue'>
-  <button class='sbutton' style="background-color: #8ffe09; color: white;" bindtap="addClicked">
-    添加反馈
+  <button class='sbutton1' style="width: 15rpx; background-color: #8ffe09; color: white;" bindtap="addClicked">
+    添加
   </button>
-  <button class='sbutton' style="background-color: #04f489; color: white;" bindtap="statisticsClicked">
-    反馈统计
+  <button class='sbutton1' style="width: 15rpx; background-color: #04f489; color: white;" bindtap="statisticsClicked">
+    统计
   </button>
-  <button class='sbutton' style="background-color: #8ffe09; color: white;" bindtap="orderTimeClicked">
-    按反馈时间排序
+  <button class='sbutton2' style="background-color: #8ffe09; color: white;" bindtap="orderTimeClicked">
+    按时间排序
   </button>
-  <button class='sbutton' style="background-color: #04f489; color: white;" bindtap="orderStatusClicked">
+  <button class='sbutton2' style="background-color: #04f489; color: white;" bindtap="orderStatusClicked">
     按状态排序
   </button>
 </view>
@@ -18,13 +18,11 @@
       <view class='list_top'>
         <view class='numAndTime'>
           <view  class='numInfo' bindtap="feedbackDetailClicked" data-idx="{{index}}">
-            <view class='num'>{{item.feedbackContent}}</view>
+            <view class='num'>（{{item.adminAnswer == null ? '未回复' : '已回复'}}）{{item.feedbackContent}}</view>
             <view class='time'>{{item.feedbackTime}}</view>
           </view>
         </view>
         <view>
-          <view class='doing' wx:if="{{item.adminAnswer == null || item.adminAnswer == ''}}">未回复</view>
-          <view class="done" wx:else>已回复</view>
           <view class='delete' bindtap="deleteFeedbackClicked" data-idx="{{index}}">删除</view>
         </view>
       </view>
