--- a/ruoyi-admin/src/main/resources/templates/system/buySpecialty/infopage.html
+++ b/ruoyi-admin/src/main/resources/templates/system/buySpecialty/infopage.html
@@ -2,9 +2,10 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
     <th:block th:include="include :: header('修改房iii间订购')" />
+    <link href="../static/css/login.min.css" th:href="@{/css/login.css}" rel="stylesheet"/>
 </head>
-<body class="white-bg">
-<div class="wrapper wrapper-content animated fadeInRight ibox-content">
+<body id="bdpg" background="http://localhost/profile/back9.jpg" style="background-repeat:no-repeat;background-attachment:fixed; background-size:100% 100%;">
+<div class="wrapper wrapper-content animated fadeInRight pchpanel">
     <form class="form-horizontal m" id="form-buyRoom-buy" >
         <!--    <form class="form-horizontal m" id="form-buyroom-buy" th:object="${buyRoom}">-->
         <div class="form-group" hidden>
@@ -14,15 +15,16 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label">特产名称：</label>
+            <label class="col-sm-3 control-label"></label>
             <div class="col-sm-8">
-                <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="specialtyName" required disabled >
+                <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="specialtyName" required disabled style= "background-color:transparent;border:0px;font-size: 25px;font-family: 楷体;color: white">
             </div>
         </div>
+        <div id="showImage"></div>
         <div class="form-group">
-            <label class="col-sm-3 control-label">特产单价（￥）：</label>
-            <div class="col-sm-8">
-                <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="price" required disabled >
+            <label class="col-sm-3 control-label" style="color: white"></label>
+            <div class="col-sm-6">
+                <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="price" required disabled style= "text-align:center;background-color:transparent;border:0px;font-size: 20px;font-family: 楷体;color: white">
             </div>
         </div>
         <div class="form-group" hidden>
@@ -31,35 +33,41 @@
                 <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="houseId" required disabled >
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" hidden>
             <label class="col-sm-3 control-label">民宿名称：</label>
             <div class="col-sm-8">
                 <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="houseName" required disabled>
             </div>
         </div>
-        <div class="form-group">
-            <label class="col-sm-3 control-label">库存：</label>
+        <div class="form-group" style="color: white">
+            <label class="col-sm-3 control-label"></label>
             <div class="col-sm-8">
-                <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="inventory" required disabled >
+                <input name="description"  class="form-control"  th:value="查询中" type="text" id="description" required disabled style= "background-color:transparent;border:0px;font-size: 15px;font-family: 楷体;color: white">
+            </div>
+        </div>
+        <div class="form-group" style="color: white">
+            <label class="col-sm-3 control-label"></label>
+            <div class="col-sm-8">
+                <input name="houseId"  class="form-control"  th:value="查询中" type="text" id="inventory" required disabled style= "background-color:transparent;border:0px;font-size: 15px;font-family: 楷体;color: white">
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label">订购数量：</label>
-            <div class="col-sm-8">
+            <label class="col-sm-3 control-label" style="color: white">订购数量：</label>
+            <div class="col-sm-5">
                 <input name="houseName"  class="form-control" type="number" id="buyNumber" oninput="if(value<1)value=1" placeholder="请输入>=1的整数" >
             </div>
         </div>
         <div class="form-group">
-            <label class="col-sm-3 control-label " th:size="10">支付密码(开启安全支付)：</label>
-            <div class="col-sm-8">
+            <label class="col-sm-3 control-label " th:size="10" style="color: white">支付密码(开启安全支付)：</label>
+            <div class="col-sm-5">
                 <input name="pricePerDay" class="form-control" type="password" id="pwd" maxlength="6" minlength="6" placeholder="请输入6位支付密码" >
             </div>
         </div>
     </form>
     <div>
         <p style="text-align: right">
-            <button th:style="'background:#1E90FF;border-style:none;color:#ffff;border-radius:5px;height:30px;width:50px'" name="dg" id="dg" onclick="confirm()">确认</button>
-            <button th:style="'background:#DCDCDC;border-style:none;color:#ffff;border-radius:5px;height:30px;width:50px'" name="qx" id="qx" onclick="cancel()">取消</button>
+            <button th:style="'background:#1E90FF;border-style:none;color:#ffff;border-radius:5px;height:40px;width:70px;opacity:70%'" name="dg" id="dg" onclick="confirm()">确认支付</button>
+            <button th:style="'background:#DCDCDC;border-style:none;color:#ffff;border-radius:5px;height:40px;width:70px;opacity:70%'" name="qx" id="qx" onclick="cancel()">取消</button>
         </p>
     </div>
 
@@ -71,7 +79,7 @@
 <th:block th:include="include :: summernote-js" />
 <script th:inline="javascript" >
     console.log("进入infopage的js");
-    var houseName,specialtyName,houseId,inventory,price;
+    var houseName,specialtyName,houseId,inventory,price,imageUrl,description;
     var id=$("#id").val();
     console.log("id="+id);
     var data={};
@@ -89,6 +97,12 @@
             price=json.price;
             houseName=json.houseName;
             inventory=json.inventory;
+            imageUrl=json.imageUrl;
+            description=json.description;
+            specialtyName=specialtyName+"("+houseName+")";
+            inventory="目前剩余："+inventory+"件";
+            price=price+"元/件";
+            description="特产介绍："+description;
         }
     });
     document.getElementById("specialtyName").value=specialtyName;
@@ -96,6 +110,11 @@
     document.getElementById("price").value=price;
     document.getElementById("inventory").value=inventory;
     document.getElementById("houseName").value=houseName;
+    document.getElementById("description").value=description;
+    var imageStr="<p style='text-align: center'>\n" +
+        "                <img src='"+imageUrl+"' alt='无法显示图片' th:width='300' height='200' style='text-align: center;opacity: 70%'>\n" +
+        "            </p>";
+    document.getElementById("showImage").innerHTML=imageStr;
 
     function confirm() {
         console.log("进入confirm");
