--- a/wx/pages/user/weather/weather.wxss
+++ b/wx/pages/user/weather/weather.wxss
@@ -92,39 +92,13 @@ textarea{
 	color: #f7982a;
 }
 
-.conference-item{
-	padding: 20rpx;
-	border-top: 1rpx solid #e8e8e8;
-}
-.conference-item-img{
-	width: 100%;
-	height: 360rpx;
-	overflow: hidden;
-	position: relative;
-}
-.conference-item-img text{
-	position: absolute;
-	right: 0;
-	top: 0;
-	background: #07b5e0;
-	color: #fff;
-	font-size: 32rpx;
-	padding: 6rpx 20rpx;
-}
-.conference-item-img image{
-	width: 100%;
-}
 .conference-item-title{
+  margin: 26rpx 0;
 	font-size: 38rpx;
   color: #000;
   font-weight: bold;
 }
-.conference-item-info{
-	display: flex;
-}
-.conference-item-info text{
-	flex: 1;
-}
+
 .service-tags{
 	margin: 26rpx 0;
 }
@@ -135,6 +109,21 @@ textarea{
 	color: #f7982a;
 	font-size: 28rpx;
 	border-radius: 4rpx;
+	margin-right: 10rpx;
+	margin-bottom: 10rpx;
+	white-space: nowrap;
+}
+.button-tags{
+	margin: 26rpx 0;
+}
+.button-tags text{
+	padding: 6rpx 16rpx;
+  border: 1rpx solid #69a2db;
+  background-color: #69a2db;
+	line-height: 1;
+	color: #ffffff;
+	font-size: 30rpx;
+	border-radius: 24rpx;
 	margin-right: 10rpx;
 	margin-bottom: 10rpx;
 	white-space: nowrap;
@@ -157,4 +146,37 @@ textarea{
 button{
   margin-top: 30rpx;
   margin-bottom: 30rpx;
+}
+.list{
+  width: 33%;
+  margin:18rpx 0 0 22rpx
+}
+.tab-item{  
+  display: block;  
+  font-size: 24rpx;
+  /* font-weight: bold; */
+  width: 50%;  
+  color: #999999;  
+}  
+.active{ 
+  color: #3d4663;  
+  font-weight: bold;
+  border-bottom: 3rpx solid #3d4663;
+}  
+.recharge{
+  width: 100%;
+  height: auto;
+  background: #ffffff;
+  border-top:2rpx solid #ededed;
+}
+.record{
+  width: 100%;
+  height: auto;
+  background: #ffffff;
+  display: flex;
+  justify-content: space-between;
+}
+.icon-zuobiao{
+  margin:18rpx 0 38rpx 22rpx;
+  font-size: 30rpx;
 }
