--- a/wx/pages/user/weather/modify/weather_modify.wxml
+++ b/wx/pages/user/weather/modify/weather_modify.wxml
@@ -1,33 +1,44 @@
-<!--pages/user/weather/modify/weather_modify.wxml-->
+<!--pages/user/weather/add/weather_modify.wxml-->
 <view class='main'>
   <view class='form'>
     <view class='inputBox'>
       <label>城市</label>
-      <input class="value" type="text" value="{{city}}" bindinput="inputCity"></input>
+      <input class="value" type="text" value="{{city}}" bindinput="inputCity" placeholder="请输入城市名称"></input>
     </view>    
     <view class='inputBox'>
-      <label>低温（℃）</label>
-      <input class="value" type="number" value="{{lowT}}" bindinput="inputLowT"></input>
+      <label>天气时间</label>
+      <picker class="value" mode="date" header-text="选择时间" value="{{weatherDate}}" bindchange="bindDateChange" placeholder="请选择天气时间">
+          <text>{{weatherDate}}</text>
+          <text>▼</text>
+      </picker>
     </view>
     <view class='inputBox'>
-      <label>高温（℃）：</label>
-      <input class="value" type="number" value="{{highT}}" bindinput="inputHighT"></input>
+      <label>低温（℃）</label>
+      <input class="value" type="number" value="{{lowT}}" bindinput="inputLowT" placeholder="请输入当日低温"></input>
+    </view>
+    <view class='inputBox'>
+      <label>高温（℃）</label>
+      <input class="value" type="number" value="{{highT}}" bindinput="inputHighT" placeholder="请输入当日高温"></input>
     </view>
     <view class='inputBox'>
       <label>白天天气</label>
-      <input class="value" type="text" value="{{dayType}}" bindinput="inputDayType"></input>
+      <input class="value" type="text" value="{{dayType}}" bindinput="inputDayType" placeholder="请输入白天天气"></input>
     </view>
     <view class='inputBox'>
       <label>夜晚天气</label>
-      <input class="value" type="text" value="{{nightType}}" bindinput="inputNightType"></input>
+      <input class="value" type="text" value="{{nightType}}" bindinput="inputNightType" placeholder="请输入夜晚天气"></input>
     </view>
     <view class='inputBox'>
       <label >风速（m/s）</label>
-      <input class="value" type="digit" value="{{windSpeed}}" bindinput="inputWindSpeed"></input>
+      <input class="value" type="digit" value="{{windSpeed}}" bindinput="inputWindSpeed" placeholder="请输入当日风速"></input>
+    </view>
+    <view class='inputBox'>
+      <label >风力（级）</label>
+      <input class="value" type="number" value="{{windScale}}" bindinput="inputWindScale" placeholder="请输入当日风力"></input>
     </view>
     <view class='inputBox'>
       <label>湿度（%）</label>
-      <input class="value" type="number" value="{{humidity}}" bindinput="inputHumidity"></input>
+      <input class="value" type="number" value="{{humidity}}" bindinput="inputHumidity" placeholder="请输入空气湿度"></input>
     </view>
   </view>
   <view class='confirm'>
