--- a/wx/pages/history/room/room_history.wxml
+++ b/wx/pages/history/room/room_history.wxml
@@ -1,4 +1,5 @@
 <!--pages/history/room/room_history.wxml-->
+<wxs module="unit" src="./typeFilter.wxs"></wxs>
 <view class='main'>
   <view class='restMoney'>
     <view class='yue'>
@@ -9,7 +10,17 @@
       </button>
     </view>
   </view>
-  <!-- <view class='qiehuan' style="width:100%;height:{{height}};background:red"> -->
+  <view class="filter-flex">
+		<view class="filter-tab">
+			<text bindtap="setFilterPanel" data-findex="1" class="{{showfilterindex==1?'active':''}}">排序</text>
+		</view>
+		<view class="filter-content" wx:if="{{showfilter}}">
+			<view class="filter-panel filter-sort" wx:if="{{showfilterindex==1}}">
+				<view wx:for="{{filterdata.sort}}" wx:key="{{item.id}}" bindtap="setSort" data-sortindex="{{index}}" data-sortid="{{item.id}}" class="{{sortindex==index?'active':''}}">{{item.title}}</view>
+			</view>
+		</view>
+		<view class="filter-shadow" wx:if="{{showfilter}}" bindtap="hideFilter"></view>
+	</view>
   <view class='tab-items'>
     <view class='recharge' wx:for="{{servicelist}}" wx:key="{{item.id}}" wx:for-item="item">
       <view class='record'>
@@ -24,8 +35,12 @@
           <view class='address'>实际退房时间：{{item.checkOutDate}}</view>
         </view>
         <view class='list'>
-          <view class='word'>支付状态：{{item.isPaid}}</view>
-          <view class='word'>订单状态：{{item.isDone}}</view>
+          <view class='word' style="color:{{unit.payFilter(item.isPaid).y}}">{{unit.payFilter(item.isPaid).x}}</view>
+          <view class='word' style="color:{{unit.orderFilter(item.isDone).y}}">{{unit.orderFilter(item.isDone).x}}</view>
+          <view class="button-tags">
+            <text bindtap="onModifyTap" data-idx="{{index}}">修改</text>
+            <text bindtap="onDeleteTap" data-itemid="{{item.id}}">删除</text>
+          </view>
         </view>
       </view>
     </view>
