--- a/wx/pages/history/room/room_history.wxss
+++ b/wx/pages/history/room/room_history.wxss
@@ -6,7 +6,6 @@ page{
   width: 100%;
   height: 250rpx;
   background: #f3b328;
-  margin: 16rpx 0;
   display: flex;
   justify-content: space-between
 }
@@ -59,11 +58,11 @@ page{
   display: none
 }
 .tab-item{  
-    display: block;  
-    font-size: 24rpx;
-    /* font-weight: bold; */
-    width: 50%;  
-    color: #999999;  
+  width: 25%;
+  height: 100%;
+  font-size: 24rpx;
+  font-weight: bold;
+  color: #999999; 
 }  
 .active{ 
     color: #3d4663;  
@@ -71,9 +70,11 @@ page{
     border-bottom: 3rpx solid #3d4663;
 }  
 .recharge{
-  width: 100%;
+  width: 95%;
   height: auto;
   background: #ffffff;
+  margin: 16rpx auto;
+  border-radius: 18rpx;
 }
 .record{
   width: 100%;
@@ -82,9 +83,10 @@ page{
   border-bottom:2rpx solid #ededed;
   display: flex;
   justify-content: space-between;
+  
 }
 .list{
-  width: 70%;
+  width: 50%;
   height: 150rpx;
   margin:28rpx 0 0 22rpx
 }
@@ -175,4 +177,103 @@ page{
   font-size: 24rpx;
   line-height: 54rpx;
   color:#ededed;
+}
+.button-tags{
+	margin: 26rpx 0;
+}
+.button-tags text{
+	padding: 6rpx 16rpx;
+  border: 1rpx solid #69a2db;
+  background-color: #69a2db;
+	line-height: 1;
+	color: #ffffff;
+	font-size: 30rpx;
+	border-radius: 24rpx;
+	margin-right: 10rpx;
+	margin-bottom: 10rpx;
+	white-space: nowrap;
+}
+.filter-tab{
+	display: flex;
+	width: 100%;
+	line-height: 80rpx;
+	border-bottom: 1rpx solid #ddd;
+	position: relative;
+	z-index: 2;
+	background: #fff;
+}
+.filter-tab text{
+	flex: 1;
+	text-align: center;
+}
+.filter-tab text:after{
+	content: '';
+	display: inline-block;
+	vertical-align: 4rpx;
+	width: 0;
+	height: 0;
+	border-left: 12rpx solid transparent;
+	border-right: 12rpx solid transparent;
+	border-top: 12rpx solid #bbb;
+	margin-left: 8rpx;
+}
+.filter-tab text.active{
+	color: #f7982a;
+}
+.filter-tab:not(.sort-tab) text.active:after{
+	border-top: 0;
+	border-bottom: 12rpx solid #f7982a;
+}
+.filter-tab.sort-tab text.active:after{
+	border-top: 12rpx solid #f7982a;
+}
+.filter-panel{
+	display: flex;
+	background: #f5f5f5;
+	position: absolute;
+	width: 100%;
+	z-index: 13;
+	overflow: hidden;
+}
+.filter-panel-left,.filter-panel-right{
+	flex: 1;
+	line-height: 80rpx;
+	text-align: center;
+	max-height: 480rpx;
+	overflow-y: auto;
+}
+.filter-panel-left .active{
+	background: #fff;
+}
+.filter-panel-right .active{
+	color: #f7982a;
+}
+.filter-panel-right{
+	background: #fff;
+}
+.filter-panel-right:empty{
+	display: none;
+}
+.filter-shadow{
+	position: absolute;
+	width: 100%;
+	top: 0;
+	bottom: 0;
+	z-index: 1;
+	background: rgba(0,0,0,.5);
+}
+.filter-sort{
+	display: block;
+	background: #fff;
+}
+.filter-sort view{
+	flex: 1;
+	line-height: 80rpx;
+	text-indent: 60rpx;
+	max-height: 432rpx;
+	overflow-y: auto;
+	border-bottom: 1rpx solid #e8e8e8;
+}
+.filter-sort view.active{
+	color: #f7982a;
 }
