--- a/wx/pages/history/room/room_history.wxml
+++ b/wx/pages/history/room/room_history.wxml
@@ -41,6 +41,10 @@
             <text bindtap="onModifyTap" data-idx="{{index}}">修改</text>
             <text bindtap="onDeleteTap" data-itemid="{{item.id}}">删除</text>
           </view>
+          <view class="button-tags">
+            <text bindtap="onCommentTap" data-idx="{{index}}">评论</text>
+            <text bindtap="onDeleteTap" data-itemid="{{item.id}}">查看评论</text>
+          </view>
         </view>
       </view>
     </view>
