完成民宿历史订单评论的查询，其中图片问题是本地图片共同存在的，即通过localhost路径访问的图片均显示不出来，并非民宿历史订单图片代码的问题

--- a/wx/pages/history/room/modify/modify_room_history.wxml
+++ b/wx/pages/history/room/modify/modify_room_history.wxml
@@ -1,9 +1,8 @@
-<wxs module="unit" src="./../typeFilter.wxs"></wxs>
 <view class='main'>
   <view class='form'>
     <view class='inputBox'>
       <label>订单完成情况</label>
-      <text class="value" bindtap="isDoneTap" style="color:{{unit.orderFilter(isDone).y}}">{{unit.orderFilter(isDone).x}}</text>
+      <text class="value"></text>
     </view>
   </view>
   <view class='confirm'>
